更改为个人信息

--- a/页尾.html
+++ b/页尾.html
@@ -32,20 +32,20 @@
     //博主名称 可不改，默认取博客园提供的
     var nickName = null;
     //slogan
-    var slogan = '立德立言，无闻西东';
+    var slogan = '差不多得了';
     //icon
-    var icon = "https://ae01.alicdn.com/kf/H445e0280b88f4f34a848238a848a687fw.png";
+    var icon = "https://avatars.githubusercontent.com/u/70683664?v=4";
     //默认博客背景图片
     var defaultPic="https://img2018.cnblogs.com/blog/1138447/201904/1138447-20190426121949417-1115592219.jpg";
     //icon(浏览器标题栏上的)
-    var iconB="https://img2018.cnblogs.com/blog/1138447/201909/1138447-20190911161817172-1737762696.png";
+    var iconB="https://avatars.githubusercontent.com/u/70683664?v=4";
     //友情链接地址
-    var friendLink="https://www.cnblogs.com/summertime-wu/p/9350833.html";
+    var friendLink="https://www.cnblogs.com/ticlab";
     //关于地址
-    var aboutMe="https://www.cnblogs.com/summertime-wu/p/9350808.html";
+    var aboutMe="https://www.cnblogs.com/ticlab";
     //Github地址,假如博客username与Github username相同，不用改。
     //如 cnblogs.com/username github.com/username 这样就不用改
-    var myGayhubUrl = null;
+    var myGayhubUrl = "https://www.github.com/rfhits";
 </script>
 <script type="text/javascript">
 	/**
