--- a/页首.html
+++ b/页首.html
@@ -5,17 +5,17 @@
 <!-- 自定义导航条 -->
 <div id="mynavbar" style="margin-top: 0px;">
     <div style="position:relative;width:65pc;height:70px;margin:0 auto;">
-    	<a style="width: auto;height: 22px;margin-left: 25px;" class="c-c"  href="https://www.cnblogs.com/summertime-wu">
+    	<a style="width: auto;height: 22px;margin-left: 25px;" class="c-c"  href="https://www.cnblogs.com/ticlab">
     		<img id="nv-icon" style="width: auto;height: 22px;outline: 0;margin-top: 25px;">
     	</a>
     	<div id="mynavbar_menu">
-	    	<a href="https://www.cnblogs.com/summertime-wu" class="c-c">首页</a>
-	    	<a href="https://msg.cnblogs.com/send/summertime-wu" class="c-c">联系</a>
-	    	<a id="myGayhubUrl" href="https://github.com/Summertime-Wu" class="c-c">Github</a>
-	    	<a id="friendLink" href="#">友情链接</a>
+	    	<a href="https://www.cnblogs.com/ticlab" class="c-c">首页</a>
+	    	<a href="https://msg.cnblogs.com/send/ticlab" class="c-c">联系</a>
+	    	<a id="myGayhubUrl" href="https://github.com/rfhits" class="c-c">Github</a>
+	    	<!-- <a id="friendLink" href="#">友情链接</a> -->
 	    	<a href="https://www.cnblogs.com/">博客园</a>
             <a href="https://i.cnblogs.com/posts">管理</a>
-	    	<a id="aboutMe" href="#">关于</a>
+	    	<!-- <a id="aboutMe" href="#">关于</a> -->
 	    </div>
     </div>
 </div>
