--- a/页尾.html
+++ b/页尾.html
@@ -217,14 +217,14 @@
     var setMyBlog = {
         setCopyright: function() {
             //设置版权信息，转载出处自动根据页面url生成
-            var info_str = '<p>作者：<a target="_blank">@gzdaijie</a><br>'+
+            var info_str = '<p>作者：<a target="_blank">ticlab</a><br>'+
                 '本文为作者原创，转载请注明出处：<a class="uri"></a></p><hr></hr>', 
                 info = $(info_str),
                 info_a = info.find("a"),
                 url = window.location.href;
-            $(info_a[0]).attr("href","https://github.com/gzdaijie");
+            $(info_a[0]).attr("href","https://cnblogs/ticlab");
             $(info_a[1]).attr("href",url).text(url);
-            $("#cnblogs_post_body").prepend(info);
+            $("#cnblogs_post_body").append(info);
         },
         setCodeRow: function(){
             // 代码行号显示
@@ -281,7 +281,7 @@
             if(document.body.clientWidth>=1000){
                 this.setContent();
             }
-            // this.setCopyright();
+            this.setCopyright();
             this.setCodeRow();
         }
     }
