注释对目录的支持，因为本身cnblogs已经支持了目录

--- a/页尾.html
+++ b/页尾.html
@@ -282,9 +282,9 @@
              */ 
             this.setAtarget(); 
             //假如为手机端不显示目录
-            if(document.body.clientWidth>=1000){
-                this.setContent();
-            }
+            // if(document.body.clientWidth>=1000){
+            //     this.setContent();
+            // }
             this.setCopyright();
             this.setCodeRow();
         }
